# app-package-validation

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  entrypoint.sh  setup.cfg  setup.py  water_bodies.1.1.6.cwl
.devcontainer/: Dockerfile  devcontainer.json  environment.yml
.github/workflows/: build-image.yml
ap_validator/: app_package.py
demo/: app.py
demo/resources/: custom_buttons_bar_alt.json
tests/: test_cli.py  test_obj.py
tests/data/: invalid.cwl  req_10_no_wf_input_abstract.cwl  req_11_no_version.cwl  req_12_13_input_directory.cwl  req_12_13_no_input_directory.cwl  req_13_no_wf_input_directory.cwl  req_13_wf_input_directory.cwl  req_14_no_output_directory.cwl  req_14_output_directory.cwl  req_7_no_clt.cwl  req_7_no_wf.cwl  req_8_no_clt_basecommand.cwl  req_8_no_clt_dockerrequirement.cwl  req_9_no_wf_title.cwl  test_deny_unsupported.cwl  valid_dir_array.cwl
