[metadata]
name = ogc-ap-validator
version = 0.3.0
description = Validation tool to check OGC compliance of CWL files for application packages
long_description = Validation tool to check OGC compliance of CWL files for application packages
keywords = application package, CWL, validator, validation, OGC
license = Apache License, Version 2.0
